[gd_scene load_steps=4 format=3 uid="uid://cyx38ouxk43dn"]

[ext_resource type="Script" path="res://Scripts/Special3D/special_hud.gd" id="1_4ib6a"]
[ext_resource type="Texture2D" uid="uid://d0yay16k5lfhw" path="res://Graphics/Special Stage/SS_HUD_Sprites.png" id="1_tgu3l"]
[ext_resource type="Theme" uid="uid://bev8bkdmigtvx" path="res://Resources/SpecialHUD.tres" id="3_utlc0"]

[node name="SpecialHud" type="CanvasLayer"]
layer = 5
script = ExtResource("1_4ib6a")

[node name="TopLeft" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Player1" type="Sprite2D" parent="TopLeft"]
position = Vector2(40, 16)
texture = ExtResource("1_tgu3l")
centered = false
vframes = 12

[node name="RINGS" type="Sprite2D" parent="TopLeft"]
position = Vector2(32, 24)
texture = ExtResource("1_tgu3l")
centered = false
vframes = 6
frame = 2

[node name="RingCountP1" type="RichTextLabel" parent="TopLeft"]
layout_mode = 0
offset_left = 80.0
offset_top = 24.0
offset_right = 104.0
offset_bottom = 40.0
theme = ExtResource("3_utlc0")
bbcode_enabled = true
text = "999
"

[node name="TopRight" type="Control" parent="."]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="Player2" type="Sprite2D" parent="TopRight"]
position = Vector2(-32, 16)
texture = ExtResource("1_tgu3l")
centered = false
vframes = 12
frame = 1

[node name="RINGS" type="Sprite2D" parent="TopRight"]
position = Vector2(-40, 24)
texture = ExtResource("1_tgu3l")
centered = false
vframes = 6
frame = 2

[node name="RingCountP2" type="RichTextLabel" parent="TopRight"]
layout_mode = 0
offset_left = 8.0
offset_top = 24.0
offset_right = 32.0
offset_bottom = 40.0
theme = ExtResource("3_utlc0")
bbcode_enabled = true
text = "999"

[node name="TopCenter" type="Control" parent="."]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="TOTAL" type="Sprite2D" parent="TopCenter"]
position = Vector2(-4, 16)
texture = ExtResource("1_tgu3l")
centered = false
vframes = 3
frame = 2

[node name="RingCount" type="RichTextLabel" parent="TopCenter"]
layout_mode = 0
offset_left = 4.0
offset_top = 24.0
offset_right = 36.0
offset_bottom = 40.0
theme = ExtResource("3_utlc0")
bbcode_enabled = true
text = " 999"
scroll_active = false
autowrap_mode = 0
tab_size = 0
shortcut_keys_enabled = false
